<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_white"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:paddingTop="15dp">


        <com.softperl.urdunovelscollections.TextviewUtil.LemonMilkTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/select_type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radio_group_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/radio_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingStart="25dp"
                android:paddingEnd="10dp"
                android:text="@string/streams"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="7dp"
                android:background="@color/colorPrimaryDark" />


            <RadioButton
                android:id="@+id/radio_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingStart="25dp"
                android:paddingEnd="10dp"
                android:text="@string/artist"
                android:textSize="14sp" />


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|end"
            android:minHeight="40dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp">


            <com.softperl.urdunovelscollections.TextviewUtil.UbuntuLightTextview
                android:id="@+id/txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/apply"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>