<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorCard"
        android:gravity="center_horizontal"
        android:minHeight="180dp"
        android:orientation="vertical">


        <com.softperl.urdunovelscollections.TextviewUtil.UbuntuMediumTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/report_dialog"
            android:textAlignment="center"
            android:textColor="?attr/colorHeading"
            android:textSize="14sp" />



        <com.softperl.urdunovelscollections.EditTextUtil.UbuntuRegularEditText
            android:id="@+id/txt_review"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_share_outline"
            android:gravity="top"
            android:hint="@string/write_your_review_hint"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:textColor="?attr/colorButton"
            android:textColorHint="?attr/colorButton"
            android:textSize="12sp"
            android:visibility="visible" />


        <com.softperl.urdunovelscollections.TextviewUtil.UbuntuRegularTextview
            android:id="@+id/txt_submit"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_submit"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>


</RelativeLayout>