<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityUtil.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include
            layout="@layout/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="51dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorBackground"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text_login"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_email"
                    android:tint="?attr/colorButton" />


                <com.softperl.urdunovelscollections.EditTextUtil.UbuntuRegularEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/email_address"
                    android:textColor="?attr/colorButton"
                    android:textColorHint="?attr/colorButton"
                    android:textSize="14sp"

                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit_text_login"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_password"
                    android:tint="?attr/colorButton" />


                <com.softperl.urdunovelscollections.EditTextUtil.UbuntuRegularEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorButton"
                    android:textColorHint="?attr/colorButton"
                    android:textSize="14sp"

                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/remember_me"
                    android:textColor="?attr/colorHeading"
                    android:textSize="14sp"
                    />


                <com.softperl.urdunovelscollections.TextviewUtil.UbuntuRegularTextview
                    android:id="@+id/txt_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="?attr/colorHeading"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkPP"

                    android:textColor="?attr/colorHeading"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/movementText"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorHeading"
                    android:layout_height="wrap_content"
                    android:text="@string/pleaseagree"/>
            </LinearLayout>

            <com.softperl.urdunovelscollections.TextviewUtil.UbuntuMediumTextview
                android:id="@+id/txt_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_internet"
                android:gravity="center"
                android:minHeight="45dp"

                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.softperl.urdunovelscollections.TextviewUtil.UbuntuRegularTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/did_not_create_account"
                    android:textColor="?attr/colorHeading"
                    android:textSize="14sp" />

                <com.softperl.urdunovelscollections.TextviewUtil.UbuntuMediumTextview
                    android:id="@+id/txt_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/sign_up"
                    android:textColor="?attr/colorHeading"
                    android:textSize="15sp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>