<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_dialog_menu"
            android:gravity="center_vertical"
            android:paddingStart="15dp">

            <com.softperl.urdunovelscollections.TextviewUtil.UbuntuMediumTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_bottom"
            android:orientation="vertical"
            android:padding="10dp">

                <com.softperl.urdunovelscollections.TextviewUtil.UbuntuRegularTextview
                    android:id="@+id/txt_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/download_path"
                    android:textColor="?attr/colorHeading"
                    android:textSize="14sp" />



            <com.softperl.urdunovelscollections.TextviewUtil.UbuntuMediumTextview
                android:id="@+id/txt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_internet"
                android:gravity="center"
                android:minHeight="45dp"
                android:text="@string/OK"
                android:textColor="@color/white"
                android:textSize="14sp" />


            </LinearLayout>












    </LinearLayout>


</LinearLayout>