<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_dialog_menu"
            android:gravity="center_vertical"
            android:paddingStart="15dp">

            <com.softperl.urdunovelscollections.TextviewUtil.UbuntuMediumTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_playlist"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_bottom"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">


            <com.softperl.urdunovelscollections.EditTextUtil.UbuntuRegularEditText
                android:id="@+id/edit_playlist"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_dialog_playlist"
                android:hint="@string/add_your_playlist"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:paddingStart="10dp"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/layout_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <com.softperl.urdunovelscollections.TextviewUtil.UbuntuRegularTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_done"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <com.softperl.urdunovelscollections.TextviewUtil.UbuntuRegularTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/done"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>